// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TabPanel renders correctly > with className 1`] = `
<div
  className="tabPanelsWrapper"
  data-testid="tab-panels"
>
  <div
    aria-labelledby="tab-list-tab-0"
    className="tabPanelWrapper tabPanel active animationDirectionRtl test"
    data-testid="tab-panel_tab-list-panel-0"
    id="tab-list-panel-0"
    role="tabpanel"
  >
    First
  </div>
</div>
`;

exports[`TabPanel renders correctly > with empty props 1`] = `
<div
  className="tabPanelsWrapper"
  data-testid="tab-panels"
>
  <div
    aria-labelledby="tab-list-tab-0"
    className="tabPanelWrapper tabPanel active animationDirectionRtl"
    data-testid="tab-panel_tab-list-panel-0"
    id="tab-list-panel-0"
    role="tabpanel"
  >
    First
  </div>
</div>
`;

exports[`TabPanel renders correctly > with id 1`] = `
<div
  className="tabPanelsWrapper"
  data-testid="tab-panels"
>
  <div
    aria-labelledby="tab-list-tab-0"
    className="tabPanelWrapper tabPanel active animationDirectionRtl"
    data-testid="tab-panel_test"
    id="test"
    role="tabpanel"
  >
    First
  </div>
</div>
`;
